feat(demo template):  remove some bad code in demo template. refactor folder

--- a/src/demo.njk
+++ b/src/demo.njk
@@ -1,12 +1,11 @@
-import React from 'react';
-import ReactDOM from 'react-dom';{% for comp in comps %}
+import React from 'react';{% for comp in comps %}
 import {{comp.name}} from 'icons/{{comp.name}}';{% endfor %}
-import './index.scss';
 
 export default () => {
   return (
     <ul className="svg-comps-list">{% for comp in comps %}
-      <li><{{comp.name}} />
+      <li>
+        <{{comp.name}} />
         <div className="comp-name">{{comp.name}}</div>
       </li>{% endfor %}
     </ul>
